decoupe de la page welcome-merchant. dans le but d'afficher la liste des fiches produits.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
@@ -51,324 +51,12 @@
     </div>
   </section>
 
-  <section class="section-details-commerce">
-    <div class="container">
-      <div class="row">
-        <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
-          <div class="img-vitrine col-12 no-gutters">
-            <img class="img-vitrine" src="" alt="">
-          </div>
-          <div class="detail-commerce col-12">
-            <div class="bloc-information-commerce col-6">
-              <h2 class="nom-commerce">Boulangerie Mathieu</h2>
-              <p class="rue-commerce">82 Rue du Molinel, 59000 Lille</p>
-              <div class="bloc-ouverture ">
-                <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">OUVERT</div></a>
-              </div>
-            </div>
-            <div class="bloc-information-horaire col-6">
-              <ul>
-                <li class="detail-ouverture">Horaires d'ouverture :</li>
-                <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
-                <li class="detail-horaires">Mardi: <span class="italic-horaire">7h-19h</span></li>
-                <li class="detail-horaires">Mercredi: <span class="italic-horaire"> 7h-19h</span></li>
-                <li class="detail-horaires">Jeudi:<span class="italic-horaire"> 7h-19h</span></li>
-                <li class="detail-horaires">Vendredi: <span class="italic-horaire">7h-19h</span> </li>
-                <li class="detail-horaires">Samedi: <span class="italic-horaire"> 9h-16h30</span></li>
-                <li class="detail-horaires">Dimanche: <span class="italic-horaire">9h-12h</span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section-commande">
-    <div class="container">
-      <div class="row">
-        <div class="bloc-titre-commandes">
-          <h2 class="titre-commandes" id="il-faut-aller-ici-commandes"><i class="fas fa-cube"></i> / COMMANDES EN COURS </h2>
-          <br>
-          <br>
-          <p class="texte-commandes">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis,  iudices, nec descensurum</p>
-          <br>
+  <app-commerce-list-merchant></app-commerce-list-merchant>
+  <app-command-list-merchant></app-command-list-merchant>
+  <app-product-template-list-merchant></app-product-template-list-merchant>
 
 
 
-          <div class="bloc-commerce-commande">
-            <h3 class="titre-commerce">- Boulangerie Mathieu -</h3>
-            <table class="table-commande col-12">
-              <tr class="tr-titre">
-                <td class="td-titre col-1">Numero Commande</td>
-                <td class="td-titre col-1">Prix</td>
-                <td class="td-titre col-1">Quantité</td>
-                <td class="td-titre col-3">Statut</td>
-                <td class="td-titre col-3">Client</td>
-                <td class="td-titre col-3">Facture</td>
-              </tr>
-              <tr class="tr">
-                <td class="td-produits">#000000001</td>
-                <td class="td ">1.10€</td>
-                <td class="td">02</td>
-                <td class="td">En Attente</td>
-                <a href=""><td class="td-lien">John Doe</td></a>
-                <a href=""><td class="td"><i class="far fa-file-pdf"></i></td></a>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section-rechercher-produit">
-    <div class="container">
-      <div class="row">
-        <div class="bloc-map col-12">
-          <h2 class="titre-rechercher-produit col-12" id="il-faut-aller-ici-produits">// VOS PRODUITS</h2>
-          <p class="texte-produit">Restabat ut Caesar post haec properaret accitus et abstergendae causa suspicionis sororem suam, eius uxorem, Constantius ad se tandem desideratam venire multis fictisque blanditiis hortabatur.</p>
-          <h5 class="texte-recomandation">"Nous vous recommandons ces produits."</h5>
-          <div class="bloc-input-recherche col-12">
-            <form class="display-input col-12" action="">
-              <div class="bloc-quoi col-9">
-                <p class="text-input">Rechercher un Produit </p>
-                <input class="recherche-quoi col-8" type="text" name="quoi" placeholder="Tous type de produits" >
-              </div>
-              <div class="bloc-rechercher col-3">
-                <button class="bouton-rechercher" type="button">RECHERCHER</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section-affichage-produit">
-    <div class="container">
-      <div class="row">
-        <div class="bloc-trie col-2">
-          <form class="formulaire-inscription" action="" method="get">
-            <label for="" class="label-formulaire"> Trier par :</label>
-            <select id="liste-deroulante" class="liste-deroulante">
-              <option>Prix</option>
-              <option>Distance +</option>
-              <option>Distance -</option>
-            </select>
-
-            <label for="" class="label-formulaire"> Commerces :</label>
-            <select id="liste-deroulante" class="liste-deroulante">
-              <option>Lille</option>
-              <option>Amiens</option>
-              <option>Douai</option>
-            </select>
-            <div class="bloc-checkbox">
-              <input  id="checkbox" class="checkbox" type="checkbox">
-              <label class="label-checkbox" for="scales">Tous</label>
-            </div>
-
-            <p class="titre-avancee col-12">Recherche Avancée <i class="fas fa-angle-down"></i></p>
-            <div class="bloc-filtre-regime">
-              <p class="titre-filtre-regime">Régimes Alimentaires</p>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Végétarien</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Végétalien</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Vegan</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Sans-gluten</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Sportif</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Méditerranéen</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Détox</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Anti-cholestérol</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Anti-diabéte</label>
-              </div>
-              <div class="bloc-checkbox-regime">
-                <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-                <label class="label-regime" for="scales">Sans sel</label>
-              </div>
-            </div>
-
-            <div class="bloc-filtre-allergene">
-              <p class="titre-filtre-allergene">Allergénes</p>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Gluten</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Crustacés</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-regime" for="scales">Oeufs</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Poissons</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Arachides</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Soja</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Lait</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Fruits à coques</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Céleri</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Moutarde</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Sésame</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Sulfites</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Lupin</label>
-              </div>
-              <div class="bloc-checkbox-allergene">
-                <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-                <label class="label-allergene" for="scales">Mollusques</label>
-              </div>
-            </div>
-          </form>
-        </div>
-
-
-        <div class="bloc-affichage col-10">
-          <div class="bloc-affichage-produit col-12">
-            <div class="img-affichage col-6 no-gutters">
-              <article>
-                <figure class="work-img no-gutters">
-                  <img class="img col-12" src="/assets/img/produit/eclairchocoloat-mathieu.jpg" alt="image du produit">
-                  <figcaption>
-                    <div class="fond-filtre" ></div>
-                    <div class="note">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                  </figcaption>
-                </figure>
-              </article>
-
-            </div>
-
-            <div class="informations-affichage col-6">
-              <h5>Jus de fruits frais :</h5>
-              <p class="composition-affichage"> Royal Gala - Cox orange Granny smith - Vanille Bourbon de Madagascar.
-                Royal Gala - Cox orange Granny smith - Vanille Bourbon de Madagascar.</p>
-              <p class="key-allergene"> > Sans-gluten > Sportif </p>
-              <div class="Lieu-affichage col-8">
-                <select id="liste-mois" class="liste-mois col-12">
-                  <option>Promotion</option>
-                  <option>Invendu</option>
-                </select>
-              </div>
-              <div class="bloc-prix-affichage col-12">
-                <div class="affichage col-6">
-                  <div class="prix-affichage">144,90 €</div>
-                  <div class="bloc-prix-barre">
-                    <div class="prix-barre-affichage">25,00 €</div>
-                    <div class="trait"></div>
-                  </div>
-                </div>
-                <div class="bloc-quantite-produit col-6">
-                  <input id="quantite-produit" class="quantite-produit" type="text" name="quantite" placeholder="1" >
-                  <div class="plus-moins">
-                    <i class="fas fa-plus-circle"></i>
-                    <i class="fas fa-minus-circle"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier">DUPLIQUER</div></a>
-            </div>
-          </div>
-          <div class="bloc-pagination col-12">
-            <div class="pagination">
-              <a href="">
-                <i class="fas fa-angle-double-left"></i>
-              </a>
-              <a href="">
-                <i class="fas fa-angle-left"></i>
-              </a>
-              <p class="text-page">page :</p>
-              <a href="">
-                <div class="cercle-element">
-                  <p class="elements-pagination">1</p>
-                </div>
-              </a>
-              <a href="">
-                <div class="cercle-element">
-                  <p class="elements-pagination">2</p>
-                </div>
-              </a>
-              <a href="">
-                <div class="cercle-element">
-                  <p class="elements-pagination">3</p>
-                </div>
-              </a>
-              <a href="">
-                <div class="cercle-element">
-                  <p class="elements-pagination">4</p>
-                </div>
-              </a>
-              <a href="">
-                <i class="fas fa-angle-right"></i>
-              </a>
-              <a href="">
-                <i class="fas fa-angle-double-right"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
-  </section>
 
   <!-- BOUTON UP -->
   <div class="fond-up">
