liste des productTemplate qui fonctionne youhou !!!!

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
@@ -157,7 +157,7 @@
 
       <div class="bloc-affichage col-10">
 
-        <app-product-template-merchant-view></app-product-template-merchant-view>
+        <app-product-template-merchant-view  *ngFor="let pt of productTemplates" [productTemplate]="pt" ></app-product-template-merchant-view>
 
         <div class="bloc-pagination col-12">
           <div class="pagination">
