--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -4,7 +4,10 @@
 <section>
     <div class="diaporama">
        <img id="image" class="image-diaporama" src="assets/img/diaporama/boulangerie3.jpg" alt="Photo d'un commerce, une boulangerie">
-       <div id="slogan" class="slogan">" Notre Solution Contre Le Gaspillage Alimentaire "</div>
+       <div>
+         <p id="slogan" class="slogan">" La Solution Contre Le Gaspillage Alimentaire "</p>
+         <p class="phrase-slogan">Inscris-toi des maintenant pour profiter des offres de nos commerces partenaires.</p>
+       </div>
        <ul class="bouton-diaporama">
            <li id="arrow-left" class="arrow-left"><i class="fas fa-caret-left"></i></li>
            <li id="play-pause" class="play-pause">
@@ -24,17 +27,14 @@
             <h1 class="titre">// NOTRE CONCEPT</h1>
                <br>
                <br>
-                <p class="texte col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum quemquam ad hanc accusationem fuisse, cui, utrum vellet, liceret, nec, cum descendisset, quicquam habiturum spei fuisse, nisi alicuius intolerabili libidine et nimis acerbo odio niteretur. Sed ego Atratino, humanissimo atque optimo adulescenti meo necessario, ignosco, qui habet excusationem vel pietatis vel necessitatis vel aetatis. Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae. Ceteris non modo nihil ignoscendum, sed etiam acriter est resistendum.</p>
+               <p class="texte col-8"> Les chiffres parlent d’eux-mêmes, <span class="phrase-cle2"> le gaspillage alimentaire représente 30 kg par personne </span> et par an et <span class="phrase-cle2"> 432 000 tonnes de nourriture gaspillée par la restauration (collective et commerciale).</span>  Face à ce constat nous avons décider d’agir et de créer une solution pour promouvoir l’anti-gaspillage.
+                 <span class="nom-app">No Gâchis</span>  met en relation les particuliers et commerçants dans une optique <span class="phrase-cle2">« gagnant gagnant » </span>. Nous proposons une vitrine pour les commençants en leur garantissant la mise en avant des produits alimentaires invendus auprès de notre communauté de manière simple et rapide. <span class="nom-app">No Gashis</span> offre à notre communauté un moyen de faire des économies en réservant les produits du jour invendus à prix réduit tout en permettant à nos commerçants partenaires de réduire le gaspillage.</p>
+               <br>
+               <p class="phrase-cle"><span class="quote"><i class="fas fa-quote-left"></i></span> Le gaspillage alimentaire représente 30 kg par personne et par an. <span class="quote"><i class="fas fa-quote-right"></i></span></p>
+               <br>
+           <p class="texte col-8">Nous nous engageons dans cette optique à mettre en relation les différents acteurs au niveau local afin de lutter efficacement contre le gaspillage alimentaire. Dans cette optique, <span class="nom-app">No Gâchis</span> permet à nos associations partenaires de réserver des denrées alimentaires consommables invendus auprès des commerçants de notre réseaux.</p>
                <br>
                <br>
-               <br>
-               <p class="phrase-cle"><span class="chiffre"><i class="fas fa-quote-left"></i></span> Le gaspillage alimentaire représente 30 kg par personne et par an. <span class="chiffre"><i class="fas fa-quote-right"></i></span></p>
-               <br>
-               <br>
-               <br>
-               <p class="texte col-8">
-               Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi, cum mihi nihil sane praeter sedulitatem probarent, omnes mihi Epicuri sententiae satis notae sunt. atque eos, quos nominavi, cum Attico nostro frequenter audivi, cum miraretur ille quidem utrumque, Phaedrum autem etiam amaret, cotidieque inter nos ea, quae audiebamus, conferebamus, neque erat umquam controversia, quid ego intellegerem, sed quid probarem.
-               </p>
          </div>
      </div>
    </div>
