--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.scss
@@ -16,18 +16,27 @@
         }
 
         .slogan {
+            width: 100%;
             font-family: 'Shadows Into Light Two', cursive;
-            font-size: 2em;
+            font-size: 3.2em;
             font-style: italic;
             font-weight: 600;
-            font-style: italic;
+            text-align: center;
             color: var(--couleurBlancCreme);
             position: absolute;
-            top: 50%;
-            left: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+            top: 40%;
+        }
 
+        .phrase-slogan {
+          width: 100%;
+          font-family: 'Shadows Into Light Two', cursive;
+          font-size: 1.5em;
+          font-style: italic;
+          font-weight: 600;
+          text-align: center;
+          color: var(--couleurBlancCreme);
+          position: absolute;
+          top: 52%;
         }
 
         .bouton-diaporama {
@@ -149,17 +158,31 @@
              position: relative;
         }
 
+        .phrase-cle {
+          font-family: 'roboto', sans-serif;
+          font-size: 1em;
+          font-weight: 600;
+          color: var(--couleurNoir);
+        }
+
+        .nom-app {
+          font-family: 'roboto', sans-serif;
+          font-size: 1em;
+          font-weight: 600;
+          color: dimgray;
+        }
+
         .titre {
-             font-family: 'Ubuntu', sans-serif;
-             font-size: 1.8em;
-             font-weight: 600;
-             text-align: center;
-             color: var(--couleurNoir);
+           font-family: 'Ubuntu', sans-serif;
+           font-size: 1.8em;
+           font-weight: 600;
+           text-align: center;
+           color: var(--couleurNoir);
         }
 
         .texte {
              font-family: 'roboto', sans-serif;
-             font-size: 0.9em;
+             font-size: 1em;
              font-weight: 400;
              line-height: 1.3;
              text-align: left;
@@ -170,15 +193,24 @@
         }
 
         .phrase-cle {
-             font-family: 'Ubuntu', sans-serif;
-             font-size: 1.4em;
-             font-weight: 600;
-             text-align: center;
-             font-style: italic;
-             color: var(--couleurNoir);
+           font-family: 'roboto', sans-serif;
+           font-size: 1.4em;
+           font-weight: 600;
+           text-align: center;
+           font-style: italic;
+           color: var(--couleurNoir);
         }
 
-        .chiffre {
+        .phrase-cle2 {
+          font-family: 'roboto', sans-serif;
+          font-size: 1em;
+          font-weight: 600;
+          text-align: center;
+          font-style: italic;
+          color: dimgray;
+        }
+
+        .quote {
              font-size: 1.6em;
              color: var(--couleurVerte);
         }
