--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/command-list-merchant/command-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/command-list-merchant/command-list-merchant.component.html
@@ -12,29 +12,20 @@
         <p class="texte-commandes">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis,  iudices, nec descensurum</p>
         <br>
 
+          <!-- /merchant/shoppingCarts
+           permet de recuperer un lister de commerce + pour chacun, listes de shoppingsByCommerce.
+           --->
 
+          <div *ngFor="let c of listByCommerce" class="bloc-commerce-commande" >
+            <div class="bloc-commerce-commande" *ngIf="c.shoppingCarts.length">
+              <h3 class="titre-commerce">- {{ c.name }} -</h3>
 
-        <div class="bloc-commerce-commande">
-          <h3 class="titre-commerce">- Boulangerie Mathieu -</h3>
-          <table class="table-commande col-12">
-            <tr class="tr-titre">
-              <td class="td-titre col-1">Numero Commande</td>
-              <td class="td-titre col-1">Prix</td>
-              <td class="td-titre col-1">Quantité</td>
-              <td class="td-titre col-3">Statut</td>
-              <td class="td-titre col-3">Client</td>
-              <td class="td-titre col-3">Facture</td>
-            </tr>
-            <tr class="tr">
-              <td class="td-produits">#000000001</td>
-              <td class="td ">1.10€</td>
-              <td class="td">02</td>
-              <td class="td">En Attente</td>
-              <a href=""><td class="td-lien">John Doe</td></a>
-              <a href=""><td class="td"><i class="far fa-file-pdf"></i></td></a>
-            </tr>
-          </table>
-        </div>
+              <div *ngFor="let scbc of c.shoppingCarts"  >
+                <app-command-merchant-view  [shoppingCartByCommerce]="scbc" ></app-command-merchant-view>
+              </div>
+            </div>
+          </div>
+
       </div>
     </div>
   </div>
