--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -20,7 +20,10 @@
     </div>
 
     <div class="bloc-information-horaire col-12">
+      <!--
+      Todo a remettre
       <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+      -->
       <!--
       <ul>
         <li class="detail-ouverture">Horaires d'ouverture :</li>
