--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -6,16 +6,16 @@
 <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
 
   <div class="img-vitrine col-6 no-gutters">
-    <img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
+    <a [routerLink]="'/commerceSheet/' + commerce.id"><img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}"></a>
   </div>
 
   <div class="detail-commerce col-6">
 
     <div class="bloc-information-commerce col-12">
-      <h2 class="nom-commerce">{{commerce.name}} - {{commerce.uniqueIdName}}</h2>
+      <h2 class="nom-commerce"><a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a></h2>
       <p class="rue-commerce">{{commerce.address}}</p>
       <div class="bloc-ouverture ">
-        <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+        <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
       </div>
     </div>
 
