--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
@@ -4,10 +4,15 @@
 
 <section class="section-details-commerce">
   <div class="container">
+    <div class="row">
+      <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+        <h2 class="titre-rechercher-produit col-12" id="il-faut-aller-ici-produits">// VOS COMMERCES</h2>
 
 
         <app-commerce-merchant-view *ngFor="let c of commerces" [commerce]="c" ></app-commerce-merchant-view>
 
 
+  </div>
+    </div>
   </div>
 </section>
