--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-merchant-view/product-template-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-merchant-view/product-template-merchant-view.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="informations-affichage col-6">
-    <h5><a [routerLink]="'/productSheet/' + productTemplate.id">{{productTemplate.name}}</a> :</h5>
+    <h5>- <a [routerLink]="'/productSheet/' + productTemplate.id">{{productTemplate.name}}</a> -</h5>
     <p class="composition-affichage">{{productTemplate.description}}</p>
     <p class="key-allergene"> > Sans-gluten > Sportif </p> <!-- todo -->
     <div class="Lieu-affichage col-8">
