--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-merchant-view/product-template-merchant-view.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-merchant-view/product-template-merchant-view.component.scss
@@ -87,10 +87,11 @@ figure:hover figcaption {
 }
 
 .note {
+  font-size: 1.3em;
   color: var(--couleurVerte);
   margin-top: 20px;
   text-align: center;
-  margin-top: -25%;
+  margin-top: -32%;
   position: relative;
   visibility: hidden
 }
