--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.scss
@@ -1,5 +1,14 @@
 
 /* SECTION/ Fiche-Produit */
 .section-fiche-produit {
+  background: rgba(161,161,161,1);
+  background: -moz-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(161,161,161,1)), color-stop(5%, rgba(161,161,161,1)), color-stop(94%, rgba(102,102,102,1)), color-stop(100%, rgba(102,102,102,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: linear-gradient(135deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', endColorstr='#666666', GradientType=1 );
+  padding-bottom: 40px;
 }
 
