Modification du titre commerce dans commerce-list-merchant.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
@@ -6,7 +6,8 @@
   <div class="container">
     <div class="row">
       <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
-        <h2 class="titre-rechercher-produit col-12" id="il-faut-aller-ici-produits">// VOS COMMERCES</h2>
+        <h2 class="titre-rechercher-commerces col-12" id="il-faut-aller-ici-produits">// VOS COMMERCES</h2>
+        <p class="text-commerces">Pour modifier les informations veuillez cliquer sur le nom du commerce à modifier.</p>
 
 
         <app-commerce-merchant-view *ngFor="let c of commerces" [commerce]="c" ></app-commerce-merchant-view>
